<resources>
    <string name="app_name">PAM1-ATIVIDADE-LAYOUT</string>
    <string name="txtGasto">Tipo de gasto:</string>
    <string name="txtValor">Valor:</string>
    <string name="txtData">Data:</string>
    <string name="txtDesc">Descrição:</string>
    <string name="txtLocal">Local:</string>
    <string name="btnSelec">Selecione</string>
    <string name="hintToAll">Insira aqui</string>
    <array name="dpdwnGasto">
        <item>Opção1</item>
        <item>Opção2</item>
        <item>Opção3</item>
        <item>Opção4</item>
    </array>
    <string name="txtData1">Data1</string>
    <string name="txtData2">Data2</string>
    <string name="btnBtn1">Botão 1</string>
    <string name="btnBtn2">Botão 2</string>
</resources>
